# memkmc-tools

./: LICENSE  README.md  pyproject.toml
examples/: run_voxelize.sh
examples/full_run_from_grid/: label_to_species.txt  run_full_example.sh  run_full_exaple.py
examples/initia_state_from_grid/: label_to_species.txt  run_example.sh
examples/membrane_from_data/: run_example.py
examples/membrane_grid_from_data/: membrane_example_grid_from_example.xyz  type_classes_phase.txt
src/memkmc/: __init__.py  cli_analyze  cli_analyze.py  cli_plot_iec_wu.py  cli_voxelize.py  cli_zacros_initial_state.py  cli_zacros_inputs.py  cli_zacros_lattice.py  cli_zacros_prepare_run.py
src/memkmc/analysis/: __init__.py  specnum.py
src/memkmc/voxel/: __init__.py  grid.py  lammps.py  properties.py
src/memkmc/zacrosio/: energetics.py  initial_state.py  lattice.py  mechanism.py  simulation.py
src/memkmc/zcrosio/: __init__.py
tests/: test_properties.py  test_voxelization_from_data.py
tests/data/: membrane_example.xyz  membrane_example_grid.xyz  type_classes_example.txt
